@@ -21,7 +21,7 @@ public class PriorityTestSample2 {
   }
 
   private void log(){
-    Reporter.log(Long.toString(Thread.currentThread().getId()));
+    LogGatheringListener.addLog(Thread.currentThread().getId());
   }
 
 }
