@@ -1,4 +1,6 @@
 Current
+Fixed: GITHUB-2557: Flaky test: ThreadAffinityTest#testThreadAffinity (Krishnan Mahadevan)
+Fixed: GITHUB-2567: MethodHelper#CANONICAL_NAME_CACHE is never reset, so it could result in a memory leak (Krishnan Mahadevan)
 Fixed: GITHUB-2540: assertEquals(Collection) need check order (Stuart Marks & Julien Herr)
 Fixed: GITHUB-2360: Groovy 3 internal generated methods are detected as test methods (Ian Springer)
 Fixed: GITHUB-2522: TestNG 7.4.0 Can not skip test through listener (Nan Liang)
